[tool.poetry]
name = "overviewpy"
version = "0.1.0"
description = "Easily Extracting Information About Your Data"
authors = ["Cosima Meyer"]
license = "BSD 3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.7.2"
pandas = "^2.0.3"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
