[project]
name = "overviewpy"
version = "0.2.0"
description = "Easily Extracting Information About Your Data"
authors = [
    {name = "Cosima Meyer"},
    {name = "Barrett Smith"}
]
license = {text = "BSD 3-Clause"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.7.2",
    "pandas>=2.0.3",
    "jinja2>=3.1.2",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.4.3",
    "mkdocstrings[python]>=0.22.0",
    "mkdocs-material>=9.1.19",
    "mkdocs-jupyter>=0.24.2",
    "markdown-include>=0.8.1",
]

[dependency-groups]
test = [
    "pytest>=9.0.3",
]
dev = [
    {include-group = "test"},
    "jupyter>=1.0.0",
    "myst-nb>=0.17.2",
    "sphinx-autoapi>=2.1.1",
    "sphinx-rtd-theme>=1.2.2",
    "pydata-sphinx-theme>=0.13.3",
    "python-semantic-release>=8.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/overviewpy"]
